Bootstrap and misc bug fixes (#60)
* Bug fixes for Bootstrap 5.2
Fix bug left menu tabs not collapsing/uncollapsing properly
Fix bug toast modal not displaying properly after upgrading to Bootstrap 5.2
Fix bug tooltips not showing properly on eval graph

* More bug fixes to board width (sigh)

* Fix bug where electron was not closing properly

* Fix chat bubble - Treat chat tabs as unviewed when chat panel is collapsed.
Fix chat tabs close button so that tab doesn't get shown when close button is clicked.

* Fix scrollToBoard for larger phone displays.

* Fix bug wrong check color highlighted when viewing previous moves

* Fix Observe and Examine panel bugs

* Add 'close' button to status panel. Make hiding/showing the status panel more intuitive.

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -33,8 +33,9 @@ html, body {
   position: absolute;
   width: 100%;
   height: 100%;
-  display: block;
-  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 100;
 }
 
@@ -189,8 +190,8 @@ html, body {
 
 .nav-tabs .nav-item .closeTab {
   opacity: 0;
-  margin-right: 0px;
-  padding-right: 0px;
+  margin: 0px;
+  padding: 0px;
   font-size: 0.85em;
 }
 
@@ -298,10 +299,27 @@ ul.list-striped > li {
   text-align: center;
 }
 
-@media (max-width: 767px)
-{
+@media (max-width: 767px) {
   .collapse-init {
     display: none;
+  }
+
+  #close-status {
+    font-size: 30px;
+    top: 15px;
+    right: 9px;
+    line-height: 0px;
+    padding: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  #close-status {
+    font-size: 20px;
+    top: 9px;
+    right: 3px;
+    line-height: 0px;
+    padding: 0px;
   }
 }
 
@@ -341,4 +359,3 @@ ul.list-striped > li {
 #eval-progress {
   padding: 20px;
 }
-
